openshift/reference/keycloak/keycloak-service.yaml
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata": {
    "name": "keycloak",
    "namespace": "dda-sso",
    "labels": {
      "app.kubernetes.io/part-of": "dda-sso",
      "app.kubernetes.io/name": "keycloak"
    }
  },
  "spec": {
    "selector": {
      "app": "keycloak"
    },
    "ports": [
      {
        "name": "http",
        "port": 8080,
        "targetPort": 8080
      }
    ]
  }
}
