openshift/reference/keycloak/allow-db.yaml
{
  "apiVersion": "networking.k8s.io/v1",
  "kind": "NetworkPolicy",
  "metadata": {
    "name": "keycloak-to-db",
    "namespace": "dda-sso",
    "labels": {
      "app.kubernetes.io/part-of": "dda-sso",
      "app.kubernetes.io/name": "keycloak"
    }
  },
  "spec": {
    "podSelector": {
      "matchLabels": {
        "app": "keycloak"
      }
    },
    "policyTypes": [
      "Egress"
    ],
    "egress": [
      {
        "to": [
          {
            "podSelector": {
              "matchLabels": {
                "app": "keycloak-db"
              }
            }
          }
        ],
        "ports": [
          {
            "port": 5432,
            "protocol": "TCP"
          }
        ]
      }
    ]
  }
}
