openshift/reference/keycloak/allow-route-https.yaml
{
  "apiVersion": "networking.k8s.io/v1",
  "kind": "NetworkPolicy",
  "metadata": {
    "name": "keycloak-route-https",
    "namespace": "dda-sso",
    "labels": {
      "app.kubernetes.io/part-of": "dda-sso",
      "app.kubernetes.io/name": "keycloak"
    }
  },
  "spec": {
    "podSelector": {
      "matchLabels": {
        "app": "keycloak"
      }
    },
    "policyTypes": [
      "Egress"
    ],
    "egress": [
      {
        "ports": [
          {
            "port": 443,
            "protocol": "TCP"
          }
        ]
      }
    ]
  }
}
