openshift/reference/keycloak/allow-router.yaml
{
  "apiVersion": "networking.k8s.io/v1",
  "kind": "NetworkPolicy",
  "metadata": {
    "name": "keycloak-allow-router",
    "namespace": "dda-sso",
    "labels": {
      "app.kubernetes.io/part-of": "dda-sso",
      "app.kubernetes.io/name": "keycloak"
    }
  },
  "spec": {
    "podSelector": {
      "matchLabels": {
        "app": "keycloak"
      }
    },
    "policyTypes": [
      "Ingress"
    ],
    "ingress": [
      {
        "from": [
          {
            "namespaceSelector": {
              "matchLabels": {
                "network.openshift.io/policy-group": "ingress"
              }
            }
          }
        ],
        "ports": [
          {
            "protocol": "TCP",
            "port": 8080
          }
        ]
      }
    ]
  }
}
